--- a/HW_ML_Modeling_(Supervised)_M_Reza_Adi_K.ipynb
+++ b/HW_ML_Modeling_(Supervised)_M_Reza_Adi_K.ipynb
@@ -3591,9 +3591,9 @@
         "\n",
         "Hubungan Multivariat:  \n",
         "- Tidak terlihat hubungan yang signifikan antara **`MonthlyCharges`** dan **`tenure`** untuk pelanggan yang masih berlangganan.\n",
-        "- Kebanyakan pelanggan churn adalah mereka yang tagihan bulanannya tinggi namun masa berlangganannya cukup rendah, sedangkan yang tagihan bulanannya rendah cenderung cepat berhenti berlangganan.\n",
+        "- Banyak pelanggan dengan biaya bulanan rendah memiliki masa `tenure` yang lama.\n",
         "- Ada hubungan linear yang sangat jelas antara **`TotalCharges`** dan **`tenure`** pada pelanggan churn, untuk yang tidak churn juga sama kecuali ada cukup banyak pelanggan dengan masa tenure yang tinggi namun total tagihannya rendah, mungkin ini alasan dibalik kesetiaan mereka.\n",
-        "- Pelanggan dengan **`TotalCharges`** yang tinggi **`MonthlyCharges`** yang tinggi, namun total tagihan rendah bukan berarti tagihan bulanannya rendah juga. Ini mengindikasikan masa berlangganan yang cukup rendah.\n",
+        "- Pelanggan dengan total tagihan tinggi, tagihan bulanannya tinggi juga, namun total tagihan rendah bukan berarti tagihan bulanannya rendah.\n",
         "\n",
         "Saran:\n",
         "Strategi untuk meningkatkan retensi dapat difokuskan pada pelanggan dengan tagihan bulanan tinggi (\\$70-\\$120) karena tingkat churnnya tinggi."
